@@ -5,6 +5,7 @@
 package org.chromium.chrome.browser.tabmodel;
 
 import org.chromium.base.ThreadUtils.ThreadChecker;
+import org.chromium.base.TimeUtils;
 import org.chromium.build.annotations.NullMarked;
 import org.chromium.build.annotations.Nullable;
 import org.chromium.chrome.browser.tab.Tab;
@@ -12,7 +13,6 @@ import org.chromium.chrome.browser.tab.Tab;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.Iterator;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.ListIterator;
 
@@ -63,18 +63,20 @@ public class PendingTabClosureManager {
 
     /** Represents a set of tabs closed together. */
     static class TabClosureEvent {
-        private final LinkedList<Tab> mClosingTabs;
+        private final List<Tab> mClosingTabs;
         private final HashSet<Tab> mUnhandledTabs;
         private final @Nullable Runnable mUndoRunnable;
+        private final long mTimestamp;
 
         /**
          * @param tabs The list of closing tabs.
          * @param undoRunnable The runnable to run if the event was undone.
          */
         public TabClosureEvent(List<Tab> tabs, @Nullable Runnable undoRunnable) {
-            mClosingTabs = new LinkedList<>(tabs);
+            mClosingTabs = new ArrayList<>(tabs);
             mUnhandledTabs = new HashSet<>(mClosingTabs);
             mUndoRunnable = undoRunnable;
+            mTimestamp = TimeUtils.currentTimeMillis();
         }
 
         /**
@@ -103,13 +105,18 @@ public class PendingTabClosureManager {
         }
 
         /** Returns the list of tabs marked as closing in this event. */
-        public LinkedList<Tab> getList() {
+        public List<Tab> getList() {
             return mClosingTabs;
         }
 
         /** Returns the undo runnable. */
         public @Nullable Runnable getUndoRunnable() {
             return mUndoRunnable;
+        }
+
+        /** Returns the timestamp (in millis) of the tab closure event. */
+        public long getTimestamp() {
+            return mTimestamp;
         }
     }
 
@@ -239,7 +246,7 @@ public class PendingTabClosureManager {
     private final PendingTabClosureDelegate mDelegate;
 
     /** Representation of a set of tabs that were closed together. */
-    private final LinkedList<TabClosureEvent> mTabClosureEvents = new LinkedList<>();
+    private final ArrayList<TabClosureEvent> mTabClosureEvents = new ArrayList<>();
 
     /**
      * A {@link TabList} that represents the complete list of {@link Tab}s. This is so that
@@ -420,11 +427,19 @@ public class PendingTabClosureManager {
 
         if (mTabClosureEvents.isEmpty()) return false;
 
-        TabClosureEvent event = mTabClosureEvents.removeLast();
+        TabClosureEvent event = mTabClosureEvents.remove(mTabClosureEvents.size() - 1);
         for (Tab tab : event.getList()) {
             cancelClosureInternal(tab);
         }
         return true;
+    }
+
+    long getMostRecentClosureTime() {
+        mThreadChecker.assertOnValidThread();
+        if (mTabClosureEvents.isEmpty()) return TabModel.INVALID_TIMESTAMP;
+
+        TabClosureEvent event = mTabClosureEvents.get(mTabClosureEvents.size() - 1);
+        return event.getTimestamp();
     }
 
     private void commitClosuresInternal(List<Tab> tabs) {
